@@ -89,6 +89,7 @@
     * FIX: fix styling of top/down and bottom/up views (borders, padding)
     * FIX: fix style of mouse pointer over BI boxes
     * FIX: list of BI aggregates was incomplete in some cases
+    * FIX: single host aggregations didn't work for aggregations += [...]
     * Make titles of non-leaf tree nodes klickable
 
     WATO:
